button alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -325,10 +325,11 @@ header {
 }
 
 .contact-container {
-  background: #6070ff url(../images/contact-form-bg.svg) no-repeat 100% 100%;
+  background-color: #6070ff url(../images/contact-form-bg.svg) no-repeat 100% 100%;
   height: max-content;
   width: 100%;
   border-top-left-radius: 80px;
+  background: #6070ff;
 }
 
 .contact-container-sub {
@@ -403,7 +404,6 @@ header {
 
 .contact-form button {
   align-self: flex-start;
-  margin-left: 25px;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
